# inmar

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
.github/workflows/: django.yml
inmar_app/: apps.py  models.py  script.py  serializers.py  views.py
inmar_app/tests/: test_models.py  test_views.py
inmar_project/: asgi.py  settings.py  urls.py  wsgi.py
metadata/: models.py  script.py  serializers.py  urls.py  views.py
metadata/migrations/: 0001_initial.py  0002_rename_description_category_name_and_more.py  0003_remove_category_category_id_and_more.py
metadata/tests/: test_models.py  test_views.py
metadata_api/: asgi.py  settings.py  urls.py  wsgi.py
